Socket started .. backup

--- a/templates/command/control.html
+++ b/templates/command/control.html
@@ -50,7 +50,9 @@ Control Robot
 			<canvas id="controlCan" width="640" height="400" class="col-md-5"></canvas>
 			<span class="col-md-5"></span>
 			<div class="col-md-4">
-				<button id="controlBotU" class="arrow btn-u rounded-4x"><img src="/static/img/arrowUp.png" /></button><br>
+				<button id="controlBotU" class="arrow btn-u rounded-4x">
+					<img src="/static/img/arrowUp.png" />
+				</button><br>
 				<button id="controlBotL" class="arrow btn-u rounded-4x"><img src="/static/img/arrowLeft.png" /></button>
 				<button id="controlBotD" class="arrow btn-u rounded-4x"><img src="/static/img/arrowDown.png" /></button>
 				<button id="controlBotR" class="arrow btn-u rounded-4x"><img src="/static/img/arrowRight.png" /></button>
