--- a/templates/status/base.html
+++ b/templates/status/base.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>RobotCMS | {%block title%}{%endblock%}</title>
+    <title>Alogtech | {%block title%}{%endblock%}</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -149,7 +149,7 @@
             <div class="row">
                 <div class="col-md-6">                     
                     <p>
-                        2014 &copy; RobotCMS. ALL Rights Reserved. 
+                        2016 &copy; Alogtech. ALL Rights Reserved. 
                         <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
                     </p>
                 </div>
